[tool.poetry]
name = "async"
version = "0.1.0"
description = ""
authors = ["KellanSelig <kellan.selig@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.12b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
